@@ -1,3 +1,9 @@
+2010-05-04  Sergio Martin  <sergio.martin@artica.es>
+
+	* include/functions_reporting.php: Added the 
+	high variation for the graphs when the
+	parameter $mini is true
+
 2010-05-04 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* godmode/reporting/reporting_builder.preview.php: added file to show the
